{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 42,
  "lineage": "7292329b-40b3-2a54-f14c-5878770d303c",
  "resources": [
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/backend-tg/fb1c25ed835b3800",
            "arn_suffix": "targetgroup/backend-tg/fb1c25ed835b3800",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/backend-tg/fb1c25ed835b3800",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/backend-tg/fb1c25ed835b3800"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/frontend-tg/1116ca1d4b94daa2",
            "arn_suffix": "targetgroup/frontend-tg/1116ca1d4b94daa2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/frontend-tg/1116ca1d4b94daa2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815856636579:targetgroup/frontend-tg/1116ca1d4b94daa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcf70d3595666b9f",
            "arn": "arn:aws:ec2:us-east-1:815856636579:elastic-ip/eipalloc-0bcf70d3595666b9f",
            "association_id": "eipassoc-051d09fe24b0d8e61",
            "domain": "vpc",
            "id": "eipalloc-0bcf70d3595666b9f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a099c82f1cc39def",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-44-194-130-236.compute-1.amazonaws.com",
            "public_ip": "44.194.130.236",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:internet-gateway/igw-03b481512b495c3ac",
            "id": "igw-03b481512b495c3ac",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcf70d3595666b9f",
            "association_id": "eipassoc-051d09fe24b0d8e61",
            "connectivity_type": "public",
            "id": "nat-01464d61e0da6bda4",
            "network_interface_id": "eni-0a099c82f1cc39def",
            "private_ip": "10.0.1.24",
            "public_ip": "44.194.130.236",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06b6a11f2c56094da",
            "tags": {
              "Name": "prod-vpc-nat"
            },
            "tags_all": {
              "Name": "prod-vpc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:route-table/rtb-0945fef640d640fe3",
            "id": "rtb-0945fef640d640fe3",
            "owner_id": "815856636579",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01464d61e0da6bda4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-private-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "rtb-0945fef640d640fe3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:route-table/rtb-031cd22c4c3ba8402",
            "id": "rtb-031cd22c4c3ba8402",
            "owner_id": "815856636579",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b481512b495c3ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-public-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "rtb-031cd22c4c3ba8402",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b2fdd86723be770",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-022cf7a98717a02cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0369906faedac2ed6",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-00c67db13f86326ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21d8076ba7e958d",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-05dbcca666b5314f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b10991de3faa98e5",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-01596b90e5cd1a67a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a055e9ae5f7e22a8",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-0f2bf1ed90af96de6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081cd96832991a9ea",
            "region": "us-east-1",
            "route_table_id": "rtb-0945fef640d640fe3",
            "subnet_id": "subnet-0c91b789b4f5847b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b17e66a284317a79",
            "region": "us-east-1",
            "route_table_id": "rtb-031cd22c4c3ba8402",
            "subnet_id": "subnet-06b6a11f2c56094da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f42f2169ae20a52",
            "region": "us-east-1",
            "route_table_id": "rtb-031cd22c4c3ba8402",
            "subnet_id": "subnet-0c35710e1a67a4749"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_backend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-0ce11e8063b7d208e",
            "description": "Allow HTTP/HTTPS for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce11e8063b7d208e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-0ce11e8063b7d208e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-015a0018e4dbdc94d",
            "description": "Allow HTTP/HTTPS from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015a0018e4dbdc94d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-015a0018e4dbdc94d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-054b7d4bfff04ba36",
            "description": "Allow SSH + HTTP for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054b7d4bfff04ba36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-054b7d4bfff04ba36",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-0fe51ff136db46ece",
            "description": "Allow SSH from allowed CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe51ff136db46ece",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-sg"
            },
            "tags_all": {
              "Name": "bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-0fe51ff136db46ece",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-054f719ad2c43a39c",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054f719ad2c43a39c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-054f719ad2c43a39c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:security-group/sg-021d4224c3ed0d5b3",
            "description": "Allow SSH + HTTP for frontend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021d4224c3ed0d5b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "sg-021d4224c3ed0d5b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-0f2bf1ed90af96de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2bf1ed90af96de6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-web-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-1"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-0f2bf1ed90af96de6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-0c91b789b4f5847b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c91b789b4f5847b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-web-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-2"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-0c91b789b4f5847b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-022cf7a98717a02cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022cf7a98717a02cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-app-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-1"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-022cf7a98717a02cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-00c67db13f86326ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c67db13f86326ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-app-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-2"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-00c67db13f86326ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-05dbcca666b5314f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dbcca666b5314f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-db-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-1"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-05dbcca666b5314f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-01596b90e5cd1a67a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01596b90e5cd1a67a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-db-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-2"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-01596b90e5cd1a67a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-06b6a11f2c56094da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6a11f2c56094da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-06b6a11f2c56094da",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:subnet/subnet-0c35710e1a67a4749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c35710e1a67a4749",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815856636579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0834dcec6fe1db61c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "subnet-0c35710e1a67a4749",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815856636579:vpc/vpc-0834dcec6fe1db61c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009c41ac82906f880",
            "default_route_table_id": "rtb-0fca31e05ef960b13",
            "default_security_group_id": "sg-060b3f8fcda9ac4e7",
            "dhcp_options_id": "dopt-05373037de3e7f166",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0834dcec6fe1db61c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fca31e05ef960b13",
            "owner_id": "815856636579",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "815856636579",
            "id": "vpc-0834dcec6fe1db61c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}